# sheep

./: .travis.yml  CHANGELOG.md  COPYING  Cargo.toml  LICENSE-APACHE  README.md  bors.toml
sheep/: Cargo.toml
sheep/benches/: maxrects.rs
sheep/examples/simple_pack/: main.rs
sheep/src/: lib.rs  sprite.rs
sheep/src/format/: amethyst.rs  mod.rs  named.rs
sheep/src/pack/: maxrects.rs  mod.rs  simple.rs
sheep_cli/: Cargo.toml
sheep_cli/src/: main.rs
