[package]
name = "sheep"
version = "0.2.1"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
description = "Modular and lightweight spritesheet packing library"
keywords = ["sdk", "amethyst", "sprites", "2d", "packing"]
categories = ["game-engines"]

homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/sheep"

readme = "../README.md"
license = "MIT/Apache-2.0"

[features]
default = ["amethyst"]
amethyst = ["serde", "serde_derive"]

[badges]
travic-ci = { repository = "amethyst/sheep", branch = "master" }

[dependencies]
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

[dev-dependencies]
image = "0.20"
ron = "0.4"

[[example]]
name = "simple_pack"
path = "examples/simple_pack/main.rs"
