[package]
name = "sheep_cli"
version = "0.2.0"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
description = "Modular and lightweight spritesheet packer"
keywords = ["game", "engine", "sdk", "amethyst", "sprites", "2d", "packing", "cli"]
categories = ["game-engines"]

homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/sheep"

readme = "../README.md"
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0.89"
sheep = { path = "../sheep" }
image = "0.20"
clap = "2.32"
ron = "0.4"

[[bin]]
name = "sheep"
path = "src/main.rs"
