[package]
name = "sheep_cli"
version = "0.3.0"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
description = "Modular and lightweight spritesheet packer"
keywords = ["sdk", "amethyst", "sprites", "packing", "cli"]
categories = ["game-engines"]

homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/sheep"

readme = "../README.md"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "amethyst/sheep", branch = "master" }

[dependencies]
serde = "1.0.89"
sheep = { path = "../sheep", version = "0.3.0" }
image = "0.20"
clap = "2.32"
ron = "0.4"
oxipng = "2.2"
png = "0.15"
glob = "0.3"

[[bin]]
name = "sheep"
path = "src/main.rs"
